--- a/Day_01/src/components/NavBar/_NavBar.sass
+++ b/Day_01/src/components/NavBar/_NavBar.sass
@@ -1,13 +1,53 @@
 .mobile__nav
     display: none
-    nav
-        width: 100%
-        height: 14vh
-        position: fixed
-        top: 0
-        left: 0
     @media screen and ( max-width: 800px )
         display: flex
         flex-direction: column
         align-items: center
         justify-content: center
+        nav
+            width: 100%
+            height: 10vh
+            position: fixed
+            z-index: 900
+            top: 0
+            left: 0
+            display: flex
+            align-items: center
+            justify-content: space-between
+            background-color: rgba(255, 255, 255, 0.4)
+            backdrop-filter: blur(4px)
+            padding: 0 1rem
+            .desktop__nav__logo
+                color: $color__violet
+
+.desktop__nav
+    width: 100%
+    height: 12vh
+    display: flex
+    align-items: center
+    justify-content: space-between
+    padding: 0 2rem
+    .desktop__nav__logo
+        color: $color__violet
+    .desktop__nav__list
+        list-style: none
+        display: flex
+        align-items: center
+        justify-content: center
+        li
+            cursor: pointer
+            font-weight: 500
+            font-size: 1rem
+            &:not(:last-child)
+                margin-right: 2rem
+    .desktop__nav__cta
+        cursor: pointer
+        padding: .8rem 3rem
+        background-color: $color__green
+        color: $color__white
+        border: none
+        border-radius: 8px
+        font-size: 14px
+    @media screen and ( max-width: 800px )
+        display: none
