--- a/Day_01/src/style.sass
+++ b/Day_01/src/style.sass
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;600;700;800&display=swap')
+
 *
     padding: 0
     margin: 0
@@ -7,16 +9,19 @@
 body
     width: 100%
     height: fit-content
+    font-family: 'Noto Sans', sans-serif
 
 header
     width: 100%
-    height: 100vh
+    @media screen and ( max-width: 800px )
+        padding-top: 10vh
 
 $color__black: rgb(0,0,0)
 $color__white: rgb(255,255,255)
 $color__green: rgb(0, 207, 128)
-$color__violet: rgb(147, 0, 206)
+$color__violet: rgb(88, 0, 122)
 
 @import ./components/NavBar/_NavBar
+@import ./components/Drawer/_Drawer
 @import ./components/Banner/_Banner
 @import ./components/ListItem/_ListItem
