--- a/day_02/src/components/NavBar/_NavBar.sass
+++ b/day_02/src/components/NavBar/_NavBar.sass
@@ -5,9 +5,52 @@ nav
     align-items: center
     justify-content: space-between
     padding: 0 1rem
-    background-color: #ac98ff
-    .cta
+    position: relative
+    a
+        cursor: pointer
+        *
+            cursor: pointer
+    .nav__logo
+        font-size: 16px
+        font-weight: 800
+    .nav__icon
         display: flex
         align-items: center
+        cursor: pointer
+        *
+            cursor: pointer
         p
+            font-size: 15px
+            font-weight: 600
             margin-right: 1rem
+
+.nav__slider
+    position: fixed
+    top: 0
+    right: 50vw
+    width: 20vw
+    height: 70vh
+    background-color: $color__primary
+    z-index: 1000
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    *
+        color: #FFFFFF
+    .nav__icon
+        position: absolute
+        top: 1rem
+        right: 1rem
+        p
+            font-weight: 400
+            font-size: 14px
+    ul
+        list-style: none
+        display: flex
+        flex-direction: column
+        align-items: center
+        li
+            cursor: pointer
+            &:not(:last-child)
+                margin-bottom: 2rem
