--- a/day_02/src/style.css
+++ b/day_02/src/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;600;700;800&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=stardom@400&f[]=satoshi@900,700,500,300,400&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +12,7 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Satoshi", sans-serif;
 }
 
 header {
@@ -32,6 +32,11 @@ header {
   }
 }
 
+a {
+  color: unset;
+  text-decoration: none;
+}
+
 .cover {
   width: 50%;
   height: 100%;
@@ -49,7 +54,6 @@ header {
   display: -ms-flexbox;
   display: flex;
   height: 40%;
-  background-color: #00ff00;
 }
 
 .banner {
@@ -71,19 +75,99 @@ nav {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 0 1rem;
-  background-color: #ac98ff;
+  position: relative;
 }
 
-nav .cta {
+nav a {
+  cursor: pointer;
+}
+
+nav a * {
+  cursor: pointer;
+}
+
+nav .nav__logo {
+  font-size: 16px;
+  font-weight: 800;
+}
+
+nav .nav__icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
-nav .cta p {
+nav .nav__icon * {
+  cursor: pointer;
+}
+
+nav .nav__icon p {
+  font-size: 15px;
+  font-weight: 600;
   margin-right: 1rem;
+}
+
+.nav__slider {
+  position: fixed;
+  top: 0;
+  right: 50vw;
+  width: 20vw;
+  height: 70vh;
+  background-color: #fc9105;
+  z-index: 1000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.nav__slider * {
+  color: #FFFFFF;
+}
+
+.nav__slider .nav__icon {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+}
+
+.nav__slider .nav__icon p {
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.nav__slider ul {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.nav__slider ul li {
+  cursor: pointer;
+}
+
+.nav__slider ul li:not(:last-child) {
+  margin-bottom: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
