--- a/day_02/src/style.sass
+++ b/day_02/src/style.sass
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;300;400;600;700;800&display=swap')
+@import url('https://api.fontshare.com/v2/css?f[]=stardom@400&f[]=satoshi@900,700,500,300,400&display=swap')
 
 *
     padding: 0
@@ -6,10 +6,15 @@
     box-sizing: border-box
     cursor: default
 
+$font__serif: "Stardom", serif
+$font__sans: 'Satoshi', sans-serif
+
+$color__primary: #fc9105
+
 body
     width: 100%
     height: fit-content
-    font-family: 'Noto Sans', sans-serif
+    font-family: $font__sans
 
 header
     width: 100%
@@ -17,6 +22,10 @@ header
     display: flex
     @media screen and ( max-width: 800px )
         flex-direction: column
+
+a
+    color: unset
+    text-decoration: none
 
 @import ./containers/Cover/_Cover
 @import ./containers/Details/_Details
