--- a/day_02/src/components/Banner/_Banner.sass
+++ b/day_02/src/components/Banner/_Banner.sass
@@ -1,4 +1,40 @@
 .banner
     height: 50%
     width: 100%
-    background-color: #98cc60
+    display: flex
+    .banner__attr
+        width: 14%
+        height: 100%
+        display: flex
+        align-items: center
+        justify-content: center
+        .banner__attr__txt
+            writing-mode: vertical-lr
+            text-transform: uppercase
+            cursor: pointer
+            h2
+                font-size: 15px
+                font-weight: 500
+                cursor: pointer
+    .banner__section
+        padding: 1.4rem 1rem
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        .banner__serial
+            font-size: 18px
+            font-weight: 600
+        .banner__heading
+            font-family: $font__serif
+            font-size: 4rem
+            font-weight: 600
+            margin-bottom: 1rem
+        .banner__cr__attr
+            font-size: .8rem
+            font-weight: 600
+            width: 100%
+            text-align: end
+            cursor: pointer
+            *
+                cursor: pointer
