--- a/day_02/src/style.css
+++ b/day_02/src/style.css
@@ -59,7 +59,76 @@ a {
 .banner {
   height: 50%;
   width: 100%;
-  background-color: #98cc60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.banner .banner__attr {
+  width: 14%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.banner .banner__attr .banner__attr__txt {
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.banner .banner__attr .banner__attr__txt h2 {
+  font-size: 15px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.banner .banner__section {
+  padding: 1.4rem 1rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.banner .banner__section .banner__serial {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.banner .banner__section .banner__heading {
+  font-family: "Stardom", serif;
+  font-size: 4rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.banner .banner__section .banner__cr__attr {
+  font-size: .8rem;
+  font-weight: 600;
+  width: 100%;
+  text-align: end;
+  cursor: pointer;
+}
+
+.banner .banner__section .banner__cr__attr * {
+  cursor: pointer;
 }
 
 nav {
