--- a/day_02/src/style.sass
+++ b/day_02/src/style.sass
@@ -27,6 +27,9 @@ a
     color: unset
     text-decoration: none
 
+ul
+    list-style: none
+
 @import ./containers/Cover/_Cover
 @import ./containers/Details/_Details
 @import ./components/Banner/_Banner
