--- a/day_02/src/containers/Cover/_Cover.sass
+++ b/day_02/src/containers/Cover/_Cover.sass
@@ -1,4 +1,10 @@
 .cover
     width: 50%
     height: 100%
-    background-color: #bc91aa
+    @media screen and ( max-width: 800px )
+        width: 100%
+        height: 60vh
+    .cover__banner
+        height: 86%
+        width: 100%
+        display: flex
