--- a/day_02/src/style.sass
+++ b/day_02/src/style.sass
@@ -22,6 +22,7 @@ header
     display: flex
     @media screen and ( max-width: 800px )
         flex-direction: column
+        height: fit-content
 
 a
     color: unset
@@ -34,7 +35,7 @@ ul
 @import ./containers/Details/_Details
 @import ./components/Banner/_Banner
 @import ./components/BottomNav/_BottomNav
-@import ./components/Cover/_Cover
+@import ./components/CoverImage/_CoverImage
 @import ./components/DetailsCard/_DetailsCard
 @import ./components/NavBar/_NavBar
 @import ./components/SideBar/_SideBar
