--- a/day_02/src/components/Banner/_Banner.sass
+++ b/day_02/src/components/Banner/_Banner.sass
@@ -30,6 +30,8 @@
             font-size: 4rem
             font-weight: 600
             margin-bottom: 1rem
+            @media screen and ( max-width: 800px )
+                font-size: 2.6rem
         .banner__cr__attr
             font-size: .8rem
             font-weight: 600
