--- a/day_02/src/containers/Details/_Details.sass
+++ b/day_02/src/containers/Details/_Details.sass
@@ -1,6 +1,9 @@
 .details
     width: 50%
     height: 100%
+    @media screen and ( max-width: 800px )
+        width: 100%
+        height: 90vh
     .details__assets
         width: 100%
         display: flex
