--- a/day_02/src/style.css
+++ b/day_02/src/style.css
@@ -29,6 +29,9 @@ header {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 }
 
@@ -44,12 +47,33 @@ ul {
 .cover {
   width: 50%;
   height: 100%;
-  background-color: #bc91aa;
+}
+
+@media screen and (max-width: 800px) {
+  .cover {
+    width: 100%;
+    height: 60vh;
+  }
+}
+
+.cover .cover__banner {
+  height: 86%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .details {
   width: 50%;
   height: 100%;
+}
+
+@media screen and (max-width: 800px) {
+  .details {
+    width: 100%;
+    height: 90vh;
+  }
 }
 
 .details .details__assets {
@@ -123,6 +147,12 @@ ul {
   margin-bottom: 1rem;
 }
 
+@media screen and (max-width: 800px) {
+  .banner .banner__section .banner__heading {
+    font-size: 2.6rem;
+  }
+}
+
 .banner .banner__section .banner__cr__attr {
   font-size: .8rem;
   font-weight: 600;
@@ -133,6 +163,55 @@ ul {
 
 .banner .banner__section .banner__cr__attr * {
   cursor: pointer;
+}
+
+.bottom__nav {
+  width: 100%;
+  height: 14%;
+  background-color: #0A0A0A;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.bottom__nav .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.bottom__nav .item .line {
+  width: 4rem;
+  height: 2px;
+  background-color: #FFFFFF;
+}
+
+.bottom__nav .item p {
+  color: #ffffff;
+  padding: 0 1rem;
+  cursor: pointer;
+  font-size: .9rem;
+  font-weight: 400;
+}
+
+.cover__image {
+  width: 84%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .details__card {
@@ -220,8 +299,10 @@ nav .nav__icon p {
   top: 0;
   right: 50vw;
   width: 20vw;
-  height: 70vh;
-  background-color: #fc9105;
+  height: 60vh;
+  background-color: #0a0a0aa2;
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
   z-index: 1000;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -273,6 +354,63 @@ nav .nav__icon p {
 
 .nav__slider ul li:not(:last-child) {
   margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 800px) {
+  .nav__slider {
+    position: fixed;
+    top: 0;
+    right: 0vw;
+    width: 100vw;
+    height: 60vh;
+  }
+}
+
+.sidebar {
+  width: 16%;
+  height: 100%;
+}
+
+.sidebar .search {
+  height: 20%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #fc9105;
+}
+
+.sidebar .social {
+  height: 80%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.sidebar .social .social__link {
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  -webkit-writing-mode: vertical-rl;
+      -ms-writing-mode: tb-rl;
+          writing-mode: vertical-rl;
 }
 
 .thumbnail {
